fix: small styling issues & better primary color support w/Dark Mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,10 @@ $side-menu-width: 250px;
   gap: 4px;
 }
 
+.gap-4px {
+  gap: 4px;
+}
+
 .btn-group-xs > .btn, .btn-xs {
   padding  : 1px 5px;
   font-size  : 12px;
@@ -131,6 +135,9 @@ section {
 .slick-dark-mode {
   --slick-button-style-bg-color: #212121;
   --slick-button-border-color: #626262;
+  .text-primary {
+    color: #599BFE !important;
+  }
 }
 
 .button-style {
@@ -175,11 +182,4 @@ section {
   .btn-outline-secondary {
     color: #dfdfdf;
   }
-}
-
-.ms-dark-mode,
-.ms-drop.ms-dark-mode,
-.slick-dark-mode .ms-dark-mode,
-.slick-dark-mode {
-  --slick-checkbox-selector-unchecked-color: #89d1f5;
 }
